# beauty-bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  question-1.py  question-2.py  question-3.py  question-4.py  question-5.py  settings.py
