[tool.poetry]
name = "beauty-bot"
version = "0.1.0"
description = ""
authors = ["Abdunazarov <abdunazarovdior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.3"
pymongo = "^4.6.1"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
